--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "docs",
   "description": "Documentation for the Cosmo Design System.",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "author": "Jackson Dolman <jackson@cosmogroup.io>",
   "bugs": {
     "url": "https://github.com/cosmo-au/docs/issues"
   },
   "dependencies": {
-    "@cosmo-au/design-system": "^1.0.1",
+    "@cosmo-au/design-system": "^1.0.3",
     "@stitches/react": "^1.2.7",
     "next": "12.1.0",
     "next-seo": "^5.1.0",
@@ -15,22 +15,19 @@
     "phosphor-react": "^1.4.1",
     "react": "17.0.2",
     "react-code-blocks": "^0.0.9-0",
-    "react-dom": "17.0.2",
-    "react-highlight.js": "^1.0.7"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@cosmo-au/eslint-config-cosmo": "^1.1.9",
     "@types/node": "17.0.21",
-    "@types/react": "17.0.39",
+    "@types/react": "^17.0.40",
     "eslint": "8.10.0",
-    "eslint-config-next": "12.1.0",
     "typescript": "4.6.2"
   },
   "homepage": "https://github.com/cosmo-au/docs#readme",
   "license": "MIT",
   "packageManager": "yarn@3.2.0",
   "prettier": "@cosmo-au/eslint-config-cosmo/.prettierrc.json",
-  "private": false,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cosmo-au/docs.git"
