--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "version": "2.0.6",
   "author": "Jackson Dolman <jackson@cosmogroup.io>",
   "bugs": {
-    "url": "https://github.com/cosmo-au/docs/issues"
+    "url": "https://github.com/withcosmo/docs/issues"
   },
-  "homepage": "https://github.com/cosmo-au/docs#readme",
+  "homepage": "https://github.com/withcosmo/docs#readme",
   "license": "MIT",
   "packageManager": "yarn@3.2.1",
   "prettier": "eslint-config-dolmios/.prettierrc.json",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cosmo-au/docs.git"
+    "url": "git+https://github.com/withcosmo/docs.git"
   },
   "scripts": {
     "build": "next build",
@@ -28,7 +28,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@cosmo-au/design-system": "^2.0.6",
+    "@withcosmo/design-system": "^2.0.6",
     "dayjs": "^1.11.3",
     "next": "^12.2.2",
     "next-seo": "^5.4.0",
